# exonum-btc-anchoring

./: .gitignore  .markdownlintrc  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  DEPLOY.md  README.md  anchoring.md  appveyor.yml  build.rs  cspell.sh  exonum-dictionary.txt  newbie_guide.md  package-lock.json  package.json  tx.txt
doc/: tutorial.md
examples/: anchoring.rs  btc_anchoring.rs  btc_anchoring_sync.rs  btc_payload_extractor.rs  testnet.rs
guides/: maintenance.md  newbie.md
launcher/: setup.py
launcher/exonum_btc_anchoring_plugin/: __init__.py  plugin.py
sandbox_tests/: Cargo.toml
sandbox_tests/src/: helpers.rs  lib.rs  macros.rs  secp256k1_hack.rs  tests.rs
sandbox_tests/tests/: anchoring.rs  api.rs  auditing.rs  transfer.rs  transition.rs
src/: api.rs  client.rs  cmd.rs  config.rs  crypto.rs  error.rs  handler.rs  lib.rs  local_storage.rs  macros.rs  multisig.rs  observer.rs  rpc.rs  sandbox.rs  schema.rs  service.rs  sync.rs  test_data.rs  tests.rs  transactions.rs
src/api/: error.rs  mod.rs
src/blockchain/: consensus_storage.rs  data_layout.rs  dto.rs  error.rs  errors.rs  mod.rs  schema.rs  tests.rs  transactions.rs
src/blockchain/data_layout/: input_signatures.rs  mod.rs  tx_input_id.rs
src/btc/: address.rs  macros.rs  mod.rs  payload.rs  private_key.rs  public_key.rs  redeem_script.rs  regtest.rs  rpc.rs  transaction.rs  types.rs
src/details/: error.rs  macros.rs  mod.rs  regtest.rs  rpc.rs  sandbox.rs  tests.rs
src/details/btc/: address.rs  mod.rs  payload.rs  private_key.rs  public_key.rs  redeem_script.rs  transactions.rs  types.rs
src/factory/: args.rs  mod.rs
src/handler/: anchoring.rs  auditing.rs  basic.rs  error.rs  mod.rs  observer.rs  transition.rs
src/proto/: binary_map.rs  btc_anchoring.proto  btc_types.proto  internal.proto  mod.rs  service.proto
src/service/: anchoring.rs  config.rs  error.rs  handler.rs  mod.rs  schema.rs  transfering.rs  transferring.rs  transition.rs
src/sync/: bitcoin_relay.rs  mod.rs
src/test_helpers/: mod.rs  rpc.rs  testkit.rs
src/testkit_extras/: helpers.rs  mod.rs  rpc.rs  secp256k1_hack.rs
src/tests/: helpers.rs  macros.rs  mod.rs  rpc.rs  test_anchoring.rs  test_api.rs  test_auditing.rs  test_transition.rs
tests/: anchoring.rs  api.rs  auditing.rs  mod.rs  rpc_tests.rs  sync.rs  testnet_tests.rs  tests.rs  transition.rs
tests/testkit_extras/: helpers.rs  macros.rs  mod.rs  rpc.rs  secp256k1_hack.rs
