[package]
name = "exonum-btc-anchoring"
edition = "2018"
version = "1.0.0-rc.1"
authors = ["The Exonum Team <contact@exonum.com>"]
homepage = "https://exonum.com/doc/advanced/bitcoin-anchoring/"
repository = "https://github.com/exonum/exonum-btc-anchoring"
documentation = "https://docs.rs/exonum-btc-anchoring"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "bitcoin", "anchoring"]
categories = ["database-implementations"]
description = "An Exonum service that provides anchoring to Bitcoin blockchain."

[badges]
travis-ci = { repository = "exonum/exonum-btc-anchoring" }

[dependencies]
exonum = "1.0.0-rc.1"
exonum-cli = "1.0.0-rc.1"
exonum-crypto = { version = "1.0.0-rc.1", features = ["with-protobuf"] }
exonum-derive = "1.0.0-rc.1"
exonum-explorer = "1.0.0-rc.1"
exonum-merkledb = "1.0.0-rc.1"
exonum-proto = "1.0.0-rc.1"
exonum-rust-runtime = "1.0.0-rc.1"
exonum-supervisor = "1.0.0-rc.1"
exonum-testkit = "1.0.0-rc.1"

async-trait = "0.1.24"
bitcoin = { version = "0.18", features = ["serde"] }
bitcoin_hashes = { version = "0.3", features = ["serde"] }
bitcoincore-rpc = "0.7.0"
btc-transaction-utils = "0.6"
byteorder = "1.3"
derive_more = "0.99.3"
failure = "0.1.6"
failure_derive = "0.1.6"
futures = "0.3.4"
hex = "0.4.0"
jsonrpc = "0.11"
log = "0.4"
protobuf = { version = "2.8", features = ["with-serde"] }
rand = "0.4"
reqwest = "0.10.4"
secp256k1 = { version = "0.12", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_str = "0.1"
structopt = "0.3"
tokio = { version = "0.2.13", features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "tcp", "time"] }

[dev-dependencies]
proptest = "0.9"

[build-dependencies]
exonum-build = "1.0.0-rc.1"

[patch.crates-io]
exonum = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-cli = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-crypto = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-derive = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-explorer = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-merkledb = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-proto = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-rust-runtime = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-supervisor = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-testkit = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
exonum-build = { git = "https://github.com/slowli/exonum.git", rev = "960cede" }
